# macropad_driver

./: .gitignore  CMakeLists.txt
include/: config.hpp  xdo.hpp
src/: config.cpp  main.cpp
